--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pirogue-cli (1.0.3) unstable; urgency=medium
+
+  * Fix blocking call to adb shell su
+
+ -- U+039b <hello@pts-project.org>  Tue, 23 Aug 2022 11:28:19 +0200
+
 pirogue-cli (1.0.2) unstable; urgency=medium
 
   * Remove Frida debug output
