--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pirogue-cli (1.0.4) unstable; urgency=medium
+
+  * Add pirogue-view-tls command to view decrypted TLS traffic
+
+ -- U+039b <hello@pts-project.org>  Mon, 05 Sep 2022 15:18:24 +0200
+
 pirogue-cli (1.0.3) unstable; urgency=medium
 
   * Fix blocking call to adb shell su
