--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pirogue-cli (1.0.5) unstable; urgency=medium
+
+  * Add tracing of socket operations
+
+ -- U+039b <hello@pts-project.org>  Fri, 23 Sep 2022 15:18:02 +0200
+
 pirogue-cli (1.0.4) unstable; urgency=medium
 
   * Add pirogue-view-tls command to view decrypted TLS traffic
