--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pirogue-cli (1.0.7) unstable; urgency=medium
+
+  * Support spawn gating 
+
+ -- U+039b <hello@pts-project.org>  Tue, 06 Dec 2022 15:20:46 +0100
+
 pirogue-cli (1.0.6) unstable; urgency=medium
 
   * Align the Frida server version with the version Frida installed on the PiRogue
