--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pirogue-cli (1.0.9) unstable; urgency=medium
+
+  * Get device properties
+
+ -- U+039b <hello@pts-project.org>  Sun, 05 Mar 2023 13:05:25 +0100
+
 pirogue-cli (1.0.8) unstable; urgency=medium
 
   * Add screen recording support
