--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pirogue-cli (1.0.10) unstable; urgency=medium
+
+  * Fix crash when requesting device ABI
+  * Fix issue with HTTP2 payload reconstruction
+
+ -- U+039b <hello@pts-project.org>  Mon, 06 Mar 2023 16:49:55 +0100
+
 pirogue-cli (1.0.9) unstable; urgency=medium
 
   * Get device properties
