--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pirogue-cli (1.0.11) unstable; urgency=medium
+
+  * Improve the interception of the TLS keys
+
+ -- U+039b <hello@pts-project.org>  Sun, 26 Mar 2023 14:48:36 +0200
+
 pirogue-cli (1.0.10) unstable; urgency=medium
 
   * Fix crash when requesting device ABI
