--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pirogue-cli (1.0.15) unstable; urgency=medium
+
+  * Dump Advertising ID
+
+ -- U+039b <hello@pts-project.org>  Sun, 14 May 2023 18:37:37 +0200
+
 pirogue-cli (1.0.14) unstable; urgency=medium
 
   * Prevent Zygote from pre-forking on Android 10
