--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pirogue-cli (1.0.16) unstable; urgency=medium
+
+  * Fix issue related to PID and process correlation
+
+ -- U+039b <hello@pts-project.org>  Wed, 24 May 2023 14:13:14 +0200
+
 pirogue-cli (1.0.15) unstable; urgency=medium
 
   * Dump Advertising ID
