--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pirogue-cli (1.1.0) UNRELEASED; urgency=medium
+
+  * New upstream release, targeting Debian 12.
+
+ -- Cyril Brulebois <cyril@debamax.com>  Sat, 24 Jun 2023 02:11:38 +0200
+
 pirogue-cli (1.0.16) unstable; urgency=medium
 
   * Fix issue related to PID and process correlation
